--- a/index.html
+++ b/index.html
@@ -40,5 +40,9 @@
         addScript(gameName, version, function () {});
       });
     </script>
+    <script>
+     document.getElementsByClassName("more-games-button").remove();
+
+    </script>
   </body>
 </html>
